# scribe

./: CHANGELOG.md  Cargo.toml  README.md
src/: workspace.rs
src/buffer/: cursor.rs  mod.rs
src/buffer/operation/: group.rs  history.rs  mod.rs
src/buffer/operations/: delete.rs  insert.rs
