[package]

name = "scribe"
version = "0.7.3"
authors = ["Jordan MacDonald <jordan@wastedintelligence.com>", "Mark Sauter <dr.funk.mark@gmail.com>"]
description = "Text editor toolkit."
homepage = "https://github.com/marksauter/scribe"
repository = "https://github.com/marksauter/scribe"
documentation = "https://docs.rs/scribe"
readme = "README.md"
license-file = "LICENSE"
keywords = ["gap", "buffer", "text", "editor", "document"]

[dependencies]
syntect = "~2.1.0"
luthor = "~0.1.7"
unicode-segmentation = "^1.0"
error-chain = "0.10.0"
